// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddVersionDialog component renders 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={true}
  onClose={[Function]}
  title="Add local Electron build"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.FileInput
      hasSelection={false}
      id="custom-electron-version"
      inputProps={
        Object {
          "onClick": [Function],
        }
      }
      text="/test/file"
    />
    <br />
    <Blueprint3.Callout>
      We found an Electron.app in this folder.
      <p>
        Please specify a version, used for typings and the name. Must be 
        <code>
          semver
        </code>
         compliant.
      </p>
      <Blueprint3.InputGroup
        onChange={[Function]}
        placeholder="4.0.0"
        value=""
      />
    </Blueprint3.Callout>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={false}
        icon="add"
        key="submit"
        onClick={[Function]}
        text="Add"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`AddVersionDialog component renders 2`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={true}
  onClose={[Function]}
  title="Add local Electron build"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.FileInput
      hasSelection={false}
      id="custom-electron-version"
      inputProps={
        Object {
          "onClick": [Function],
        }
      }
      text="/test/file"
    />
    <br />
    <Blueprint3.Callout>
      We found an Electron.app in this folder.
      <p>
        Please specify a version, used for typings and the name. Must be 
        <code>
          semver
        </code>
         compliant.
      </p>
      <Blueprint3.InputGroup
        intent="danger"
        onChange={[Function]}
        placeholder="4.0.0"
        value=""
      />
    </Blueprint3.Callout>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="add"
        key="submit"
        onClick={[Function]}
        text="Add"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;
